# cpp-cmake-template

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  build_debug.sh  build_release.sh
include/baz/: Baz.hpp  Bazbis.hpp
include/core/: App.hpp
include/foo/: Foo.hpp
include/foo/bar/: Bar.hpp
src/: CMakeLists.txt  main.cpp
src/baz/: Baz.cpp  Bazbis.cpp  CMakeLists.txt
src/core/: App.cpp  CMakeLists.txt
src/foo/: CMakeLists.txt  Foo.cpp
src/foo/bar/: Bar.cpp  CMakeLists.txt
tests/: CMakeLists.txt  main_test.cpp
tests/baz/: BazTest.cpp  BazbisTest.cpp  CMakeLists.txt
tests/core/: AppTest.cpp  CMakeLists.txt
tests/foo/: CMakeLists.txt  FooTest.cpp
tests/foo/bar/: BarTest.cpp  CMakeLists.txt
